--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -5,7 +5,7 @@
 }
 
 .app-container-sidebar {
-  @apply w-64 overflow-y-auto flex flex-col bg-gray
+  @apply w-64 overflow-y-auto flex flex-col
 }
 
 .main-content {
